hphp/test/slow/reified_generics/verify-param-darray-1.php.expectf
yes
yes

Catchable fatal error: Argument 1 passed to f() must be an instance of HH\darray<int, int>, HH\dict given in %s on line 7
